mikroservices/kubernetes/add-comment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: add-comment-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: add-comment-service

  template:
    metadata:
      labels:
        app: add-comment-service

    spec:
      containers:
        - name: add-comment-service
          image: mikroservices-add-comment-service
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: add-comment-service

spec:
  selector:
    app: add-comment-service

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
