mikroservices/kubernetes/buy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buy-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: buy-service

  template:
    metadata:
      labels:
        app: buy-service

    spec:
      containers:
        - name: buy-service
          image: mikroservices-buy-service
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: buy-service

spec:
  selector:
    app: buy-service

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
