mikroservices/kubernetes/cart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cart-service

  template:
    metadata:
      labels:
        app: cart-service

    spec:
      containers:
        - name: cart-service
          image: mikroservices-cart-service
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service

spec:
  selector:
    app: cart-service

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
