mikroservices/kubernetes/cr-promocode-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: create-promocode-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: create-promocode-service

  template:
    metadata:
      labels:
        app: create-promocode-service

    spec:
      containers:
        - name: create-promocode-service
          image: mikroservices-create-promocode-service
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: create-promocode-service

spec:
  selector:
    app: create-promocode-service

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
