mikroservices/kubernetes/delete-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delete-product-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: delete-product-service

  template:
    metadata:
      labels:
        app: delete-product-service

    spec:
      containers:
        - name: delete-product-service
          image: mikroservices-delete-product-service
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: delete-product-service

spec:
  selector:
    app: delete-product-service

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
