mikroservices/kubernetes/get-messages-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get-messages-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: get-messages-service

  template:
    metadata:
      labels:
        app: get-messages-service

    spec:
      containers:
        - name: get-messages-service
          image: mikroservices-get-messages-service
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: get-messages-service

spec:
  selector:
    app: get-messages-service

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
