mikroservices/kubernetes/get-wallet-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tget-wallet-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tget-wallet-service

  template:
    metadata:
      labels:
        app: tget-wallet-service

    spec:
      containers:
        - name: tget-wallet-service
          image: mikroservices-tget-wallet-service
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: tget-wallet-service

spec:
  selector:
    app: tget-wallet-service

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
