mikroservices/kubernetes/like-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: like-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: like-service

  template:
    metadata:
      labels:
        app: like-service

    spec:
      containers:
        - name: like-service
          image: mikroservices-like-service
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: like-service

spec:
  selector:
    app: like-service

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
