mikroservices/kubernetes/login-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: login-service

  template:
    metadata:
      labels:
        app: login-service

    spec:
      containers:
        - name: login-service
          image: mikroservices-login-service
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: login-service

spec:
  selector:
    app: login-service

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
