mikroservices/kubernetes/logout-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logout-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: logout-service

  template:
    metadata:
      labels:
        app: logout-service

    spec:
      containers:
        - name: logout-service
          image: mikroservices-logout-service
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: logout-service

spec:
  selector:
    app: logout-service

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
