mikroservices/kubernetes/operations-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toperations-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: toperations-service

  template:
    metadata:
      labels:
        app: toperations-service

    spec:
      containers:
        - name: toperations-service
          image: mikroservices-toperations-service
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: toperations-service

spec:
  selector:
    app: toperations-service

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
