mikroservices/kubernetes/products-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: products-service

  template:
    metadata:
      labels:
        app: products-service

    spec:
      containers:
        - name: products-service
          image: mikroservices-products-service
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: products-service

spec:
  selector:
    app: products-service

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
