mikroservices/kubernetes/promocode-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promocode-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: promocode-service

  template:
    metadata:
      labels:
        app: promocode-service

    spec:
      containers:
        - name: promocode-service
          image: mikroservices-promocode-service
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: promocode-service

spec:
  selector:
    app: promocode-service

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
