mikroservices/kubernetes/refresh-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: refresh-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: refresh-service

  template:
    metadata:
      labels:
        app: refresh-service

    spec:
      containers:
        - name: refresh-service
          image: mikroservices-refresh-service
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: refresh-service

spec:
  selector:
    app: refresh-service

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
