mikroservices/kubernetes/top-up-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: top-up-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: top-up-service

  template:
    metadata:
      labels:
        app: top-up-service

    spec:
      containers:
        - name: top-up-service
          image: mikroservices-top-up-service
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: top-up-service

spec:
  selector:
    app: top-up-service

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
