mikroservices/kubernetes/transfer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ttransfer-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ttransfer-service

  template:
    metadata:
      labels:
        app: ttransfer-service

    spec:
      containers:
        - name: ttransfer-service
          image: mikroservices-ttransfer-service
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: ttransfer-service

spec:
  selector:
    app: ttransfer-service

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
