mikroservices/kubernetes/update-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: update-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: update-service

  template:
    metadata:
      labels:
        app: update-service

    spec:
      containers:
        - name: update-service
          image: mikroservices-update-service
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: update-service

spec:
  selector:
    app: update-service

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
