mikroservices/kubernetes/websocket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: websocket-service

  template:
    metadata:
      labels:
        app: websocket-service

    spec:
      containers:
        - name: websocket-service
          image: mikroservices-websocket-service
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: websocket-service

spec:
  selector:
    app: websocket-service

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
